codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_picker_repeat_last_change.snap
---
source: tui/src/keymap_setup.rs
expression: repeat_row
---
› Vim normal     Repeat Last Change         .
